--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 kafka.bootstrap.servers=my-cluster-kafka-brokers:9092
-mp.messaging.outgoing.event-input-stream.connector=smallrye-kafka
-mp.messaging.outgoing.event-input-stream.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.event-input-stream.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.sensu-event-stream.connector=smallrye-kafka
+mp.messaging.outgoing.sensu-event-stream.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.sensu-event-stream.value.serializer=org.apache.kafka.common.serialization.StringSerializer
 
