--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
-kafka.bootstrap.servers=my-cluster-kafka-brokers:9092
-mp.messaging.outgoing.sensu-event-stream.connector=smallrye-kafka
-mp.messaging.outgoing.sensu-event-stream.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-mp.messaging.outgoing.sensu-event-stream.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+kafka.bootstrap.servers=localhost:9092
+mp.messaging.outgoing.sensu-failure.connector=smallrye-kafka
+mp.messaging.outgoing.sensu-failure.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.sensu-failure.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+quarkus.http.port=8086
 
