--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ kafka.bootstrap.servers=my-cluster-kafka-brokers:9092
 mp.messaging.outgoing.sensu-failure.connector=smallrye-kafka
 mp.messaging.outgoing.sensu-failure.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 mp.messaging.outgoing.sensu-failure.value.serializer=org.apache.kafka.common.serialization.StringSerializer
-quarkus.http.port=8086
+#quarkus.http.port=8086
 
